# council-spending

./: .gitignore  README.md
.github/workflows/: deploy.yml
data/: manifest.json
data/contracts/: contracts.parquet
data/grants/: grants.parquet
data/summary/: contractor_concentration.parquet  dim_suppliers.parquet  grants_by_year.parquet  spend_by_category.parquet  spend_by_department.parquet  spend_by_month.parquet  spend_by_supplier.parquet
docs/research/: council-finance-critique.md  indicators.md  municipal-revenue-models.md  progressive-cuts.md  redirect-scenarios.md  revenue-levers.md
pipeline/: README.md  pyproject.toml
pipeline/config/: classifications.yaml  savings_vetting.yaml  sources.yaml
pipeline/config/column_maps/: devon_grants.yaml  devon_spending.yaml  exeter_contracts.yaml  exeter_grants.yaml  exeter_spending.yaml
pipeline/src/council_pipeline/: __init__.py  build.py  cli.py  config.py  http.py  models.py  paths.py  provenance.py  registry.py  stage.py  story.py
pipeline/src/council_pipeline/fetchers/: base.py  exeter_scrape.py  github_listing.py
pipeline/src/council_pipeline/normalize/: classify.py  dates.py  money.py  redaction.py  suppliers.py
pipeline/src/council_pipeline/parsers/: header_map.py  readers.py
pipeline/tests/: conftest.py  test_classify.py  test_entities.py  test_header_map.py  test_normalize.py  test_pipeline.py  test_savings.py
web/: README.md  next.config.ts  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/components/: CategoryAnalysis.tsx  Chart.tsx  Nav.tsx  ui.tsx
(+40 files in other folders)
