[project]
name = "council-pipeline"
version = "0.1.0"
description = "ETL for Exeter & Devon council spending transparency data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "polars>=1.0",
    "pyarrow>=16.0",
    "fastexcel>=0.11",
    "duckdb>=1.1",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "rapidfuzz>=3.9",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
]

[project.scripts]
council = "council_pipeline.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/council_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
